--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "nonbe",
+  "name": "experiment",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    // "chart.js": "^3.6.1"
+    "chart.js": "^2.7.1"
+  }
 }
