--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,26 @@
+default: &default
+  adapter: sqlite3
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
+
+development:
+  <<: *default
+  database: db/development.sqlite3
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
+test:
+  <<: *default
+  database: db/test.sqlite3
+
 production:
   <<: *default
-  database: <%= ENV['rds-mysql-server'] %>
+  database: <%= ENV['DB_DATABASE'] %>
   adapter: mysql2
   encoding: utf8mb4
   charset: utf8mb4
   collation: utf8mb4_general_ci
-  host: <%= ENV['root'] %>
-  username: <%= ENV['rds-mysql-server.cx2qpbcrwx0i.ap-northeast-1.rds.amazonaws.com'] %>
-  password: <%= ENV['rqUAtx4sMk9m52G'] %>
+  host: <%= ENV['DB_HOST'] %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
